Fix ProgressBar baseline alignment issues

--- a/tgui-next/packages/tgui/components/ProgressBar.scss
+++ b/tgui-next/packages/tgui/components/ProgressBar.scss
@@ -2,25 +2,26 @@
   display: inline-block;
   position: relative;
   width: 100%;
-  height: 20px;
-  padding: 1px;
+  padding: 0 6px;
   border: 1px solid $bar-color-border;
   background: $bar-color-background;
 }
 
 .ProgressBar__fill {
-  display: block;
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  margin: 1px;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
   transition: background-color, width 1s;
   background-color: $bar-color-normal;
 }
 
 .ProgressBar__content {
-  position: absolute;
-  top: 0;
-  right: 3px;
+  position: relative;
   line-height: 17px;
+  width: 100%;
+  text-align: right;
 }
 
 .ProgressBar--color--good {
